# speak-easy

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  TODO.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/: settings.local.json
docs/: web-app-porting-feasibility.md
docs/superpowers/plans/: 2026-03-14-streaming-tts.md  2026-03-16-session-replay-review.md  2026-03-17-courage-score.md  2026-03-19-web-interface.md  2026-03-21-openai-compatible-provider.md  2026-03-22-cefr-difficulty.md
docs/superpowers/specs/: 2026-03-14-streaming-tts-design.md  2026-03-19-web-interface-design.md  2026-03-22-cefr-difficulty-design.md
public/: ttsChunkProcessor.js
scripts/: build.sh  dev.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: chat.rs  courage.rs  dictionary.rs  downloads.rs  edge_tts.rs  event_bus.rs  gemini.rs  lib.rs  llm.rs  main.rs  session.rs  settings.rs  stt.rs  tts.rs  web.rs
src/components/: ChatView.tsx  CourageScore.tsx  DictionaryPanel.tsx  LanguageBar.tsx  MicButton.tsx  ReviewPanel.tsx  ServerStatus.tsx  SessionHistoryPanel.tsx  SetupWizard.tsx  Sidebar.tsx
src/hooks/: useAudioRecorder.ts  useLlm.ts  useStt.ts  useTts.ts
src/lib/: backend.ts  cefrHeuristic.ts  i18n.ts  prompts.ts  types.ts
src/styles/: app.css
