[package]
name = "speak-easy"
version = "0.1.0"
edition = "2021"

[lib]
name = "speak_easy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
ureq = { version = "3", features = ["native-tls", "socks-proxy"] }
whisper-rs = "0.14"
hound = "3.5"
ort = "2.0.0-rc.12"
ndarray = "0.16"
serde_bytes = "0.11"
open = "5"
zip = { version = "2", default-features = false, features = ["deflate"] }
msedge-tts = "0.2"
minimp3 = "0.5"
rusqlite = { version = "0.31", features = ["bundled"] }
